# forge-cli

./: .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SPEC.md  __init__.py  __main__.py  cli.py  docker-compose.yml  install.sh  pyproject.toml  requirements.txt
.agent/: IMPLEMENTATION_PLAN.md
.gemini/: GEMINI.md
alerts/: __init__.py
auditor/: __init__.py
config/: __init__.py  php_versions.py
cron/: __init__.py
cve/: __init__.py
databases/: __init__.py
detectors/: __init__.py
diagnostics/: __init__.py
disk/: __init__.py
docs/superpowers/plans/: 2026-04-03-db-parity-phase1.md
docs/superpowers/specs/: 2026-04-03-db-parity-phase1-design.md
installers/: __init__.py
logs/: __init__.py
monitor/: __init__.py
nginx/: __init__.py  templates.py
php/: __init__.py
provisioning/: config.py  hardening.py
security/: __init__.py
services/: __init__.py
sites/: __init__.py
ssl/: __init__.py
sslcerts/: __init__.py
state/: __init__.py
tests/: __init__.py  test_alerts.py  test_auditor.py  test_cli.py  test_cron_security.py  test_cve.py  test_databases.py  test_detectors.py  test_disk.py  test_hardening.py  test_imports.py  test_installers.py  test_new_modules.py  test_php_pool.py  test_php_version_parity.py  test_services.py  test_shell.py  test_sites.py  test_ssl.py  test_updater.py  test_v011_features.py
updater/: __init__.py
utils/: __init__.py  network.py  shell.py  ui.py
