[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-cli"
version = "0.9.0"
description = "Server Management CLI - Like Laravel Forge, but for your terminal"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Forge CLI Team"}
]
keywords = ["server", "management", "cli", "nginx", "php", "nodejs", "ssl", "ubuntu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
]

[project.scripts]
forge = "cli:main"

[project.urls]
Homepage = "https://github.com/boparaiamrit/forge-cli"

[tool.setuptools]
py-modules = ["cli", "__init__", "__main__"]
packages = ["detectors", "installers", "provisioning", "services", "sites", "sslcerts", "utils", "state", "logs", "monitor", "diagnostics", "nginx", "php", "cron", "security", "auditor", "cve", "disk", "alerts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
